--- a/core/index.html
+++ b/core/index.html
@@ -72,6 +72,30 @@
     requestAnimationFrame(f);
 </script>
 <!-- test script #3 -->
-<!--<script src="../test/kanpai-madoka.js" type="text/javascript"></script>-->
+<!--<script src="../test/kanpai-madoka.js" type="text/javascript"></script>
+<script type="text/javascript">
+    var frameCount = 0;
+    var lastTime = Date.now();
+    var nextUpdate = Date.now() + 1000;
+    var f = function () {
+        var now = Date.now();
+        frameCount++;
+        if (now >= nextUpdate) {
+            fps = ((frameCount / (now - lastTime) * 1000 * 10) | 0) / 10;
+            document.title = "FPS: " + fps.toString();
+            lastTime = now;
+            frameCount = 0;
+            nextUpdate = now + 1000;
+        }
+        if (typeof s1 !== 'undefined') {
+            s1.x += 0.5;
+        }
+        if (typeof s2 !== 'undefined') {
+            s2.x -= 0.5;
+        }
+        requestAnimationFrame(f);
+    };
+    requestAnimationFrame(f);
+</script>-->
 </body>
 </html>
