Fixed broken hair part in the 3rd test case.

--- a/core/index.html
+++ b/core/index.html
@@ -93,6 +93,10 @@
         if (typeof s2 !== 'undefined') {
             s2.x -= 0.1;
         }
+        if (typeof s3 !== 'undefined') {
+            // hair part 2
+            s3.x -= 0.1;
+        }
         requestAnimationFrame(f);
     };
     requestAnimationFrame(f);
