Added linear support for MotionGroup. Enjoy the full Madoka and Lvba Musume tests!

--- a/core/index.html
+++ b/core/index.html
@@ -14,7 +14,7 @@
         }
 
         #bp-div {
-            background: #eee;
+            background: #000;
             position: absolute;
             left: 0;
             top: 0;
@@ -45,11 +45,11 @@
     </canvas>-->
 </div>
 <script src="kevlar.js" type="text/javascript"></script>
-<!-- test script #1 -->
+<!-- test script #1 (3D-ball) -->
 <!--<script src="../test/3d-ball.js" type="text/javascript"></script>-->
-<!-- test script #2 -->
-<!--<script src="../test/kanpai-lbn.js" type="text/javascript"></script>
-<script type="text/javascript">
+<!-- test script #2 (Lvba Musume) -->
+<!--<script src="../test/kanpai-lbn.js" type="text/javascript"></script>-->
+<!--<script type="text/javascript">
     //console.log(window.parent.name);
     var frameCount = 0;
     var lastTime = Date.now();
@@ -71,10 +71,10 @@
     };
     requestAnimationFrame(f);
 </script>-->
-<!-- test script #3 -->
+<!-- test script #3 (Madoka) -->
 <script src="../test/kanpai-madoka.js" type="text/javascript"></script>
 <script type="text/javascript">
-    var frameCount = 0;
+    /*var frameCount = 0;
     var lastTime = Date.now();
     var nextUpdate = Date.now() + 1000;
     var f = function () {
@@ -99,7 +99,7 @@
         }
         requestAnimationFrame(f);
     };
-    requestAnimationFrame(f);
+    requestAnimationFrame(f);*/
 </script>
 </body>
 </html>
