--- a/core/index.html
+++ b/core/index.html
@@ -73,7 +73,7 @@
 </script>-->
 <!-- test script #3 (Madoka) -->
 <script src="../test/kanpai-madoka.js" type="text/javascript"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
     /*var frameCount = 0;
     var lastTime = Date.now();
     var nextUpdate = Date.now() + 1000;
@@ -100,6 +100,6 @@
         requestAnimationFrame(f);
     };
     requestAnimationFrame(f);*/
-</script>
+</script>-->
 </body>
 </html>
