--- a/core/index.html
+++ b/core/index.html
@@ -13,7 +13,7 @@
             height: 480px;
         }
 
-        #bp-div {
+        #bp-div, #bp-video {
             background: #000;
             position: absolute;
             left: 0;
@@ -46,7 +46,7 @@
 </div>
 <script src="kevlar.js" type="text/javascript"></script>
 <!-- test script #1 (3D-ball) -->
-<!--<script src="../test/3d-ball.js" type="text/javascript"></script>-->
+<script src="../test/3d-ball.js" type="text/javascript"></script>
 <!-- test script #2 (Lvba Musume) -->
 <!--<script src="../test/kanpai-lbn.js" type="text/javascript"></script>-->
 <!--<script type="text/javascript">
@@ -72,7 +72,7 @@
     requestAnimationFrame(f);
 </script>-->
 <!-- test script #3 (Madoka) -->
-<script src="../test/kanpai-madoka.js" type="text/javascript"></script>
+<!--<script src="../test/kanpai-madoka.js" type="text/javascript"></script>-->
 <!--<script type="text/javascript">
     /*var frameCount = 0;
     var lastTime = Date.now();
