Tested Pixi.js - it works!

--- a/test/index.html
+++ b/test/index.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Bulletproof Showcase</title>
+    <script type="text/javascript" src="http://cdn.bootcss.com/pixi.js/3.0.7/pixi.min.js"></script>
+    <!--<script type="text/javascript" src="../src/ext/pixi.js/pixi.js"></script>-->
     <style>
-        #bp-div, #bp-video {
+        #bp-div {
             background: #000;
             position: absolute;
             left: 0;
             top: 0;
             width: 682px;
             height: 438px;
-        }
-
-        #test-cases-selection a {
-            margin-right: 20px;
-            margin-top: 30px;
         }
     </style>
 </head>
