Added 'Have a try' button.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
       <a href="https://github.com/Hozuki/Bulletproof" class="btn">View on GitHub</a>
       <a href="https://github.com/Hozuki/Bulletproof/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Hozuki/Bulletproof/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="test/visual/index.html" class="btn">Have a try</a>
     </section>
 
     <section class="main-content">
       <ul>
-<li><a href="#title-english">English version</a></li>
-<li><a href="#title-schinese">简体中文版本</a></li>
+<li><a href="#bulletproof-an-html5-danmaku-player">English version</a></li>
+<li><a href="#%E9%98%B2%E5%BC%B9-html5-%E5%BC%B9%E5%B9%95%E6%92%AD%E6%94%BE%E5%99%A8">简体中文版本</a></li>
 </ul>
 
 <hr>
