Resolved broken links.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Note that there are only loose CommonJS style JavaScript files generated in this
 <div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">"</span>text/javascript<span class="pl-pds">"</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>./Bulletproof/build/Bulletproof-browser.min.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
 
 <p>After either way of importing, the <code>Bulletproof</code> namespace can be accessed in global scope.
-An example usage can be found <a href="../../test/visual/bootstrap.js">here</a>.</p>
+An example usage can be found <a href="test/visual/bootstrap.js">here</a>.</p>
 
 <h2>
 <a id="project-status" class="anchor" href="#project-status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Status</h2>
@@ -195,7 +195,7 @@ $ tsc -p <span class="pl-c1">.</span></pre></div>
 
 <div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">"</span>text/javascript<span class="pl-pds">"</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>./Bulletproof/build/Bulletproof-browser.min.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
 
-<p>在任何一种导入方式完成后，全局域中会添加一个 <code>Bulletproof</code> 命名空间。之后的使用示例可以来<a href="../../test/visual/bootstrap.js">这里</a>看看。</p>
+<p>在任何一种导入方式完成后，全局域中会添加一个 <code>Bulletproof</code> 命名空间。之后的使用示例可以来<a href="test/visual/bootstrap.js">这里</a>看看。</p>
 
 <h2>
 <a id="项目状态" class="anchor" href="#%E9%A1%B9%E7%9B%AE%E7%8A%B6%E6%80%81" aria-hidden="true"><span class="octicon octicon-link"></span></a>项目状态</h2>
