Resolved broken links #2.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ selecting test cases. The test cases are:</p>
 
 <p>You are able to select the tests from the homepage. Source code of the tests can be found in <code>test/visual/test-scripts/</code>.</p>
 
-<p>Want to see some screenshots? <a href="../images/">Here they are.</a></p>
+<p>Want to see some screenshots? <a href="docs/images/">Here they are.</a></p>
 
 <h2>
 <a id="building" class="anchor" href="#building" aria-hidden="true"><span class="octicon octicon-link"></span></a>Building</h2>
@@ -143,7 +143,7 @@ but main features are active.</p>
 
 <p>所有的测试样例都位于 <code>test/visual/test-scripts</code> 目录下。</p>
 
-<p>如果想看看运行截图的话，<a href="../images/">这里就是</a>。</p>
+<p>如果想看看运行截图的话，<a href="docs/images/">这里就是</a>。</p>
 
 <h2>
 <a id="构建" class="anchor" href="#%E6%9E%84%E5%BB%BA" aria-hidden="true"><span class="octicon octicon-link"></span></a>构建</h2>
