Added GitHub buttons.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <a href="https://github.com/Hozuki/Bulletproof/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Hozuki/Bulletproof/tarball/master" class="btn">Download .tar.gz</a>
       <a href="test/visual/index.html" class="btn">Have a try</a>
+      <div>
+        <iframe src="https://ghbtns.com/github-btn.html?user=Hozuki&repo=Bulletproof&type=star&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=Hozuki&repo=Bulletproof&type=fork&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=Hozuki&type=follow&count=true" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
+      </div>
     </section>
 
     <section class="main-content">
