--- a/index.html
+++ b/index.html
@@ -52,14 +52,20 @@ You can get it from its homepage. Browse <code>test/visual/index.html</code> in 
 selecting test cases. The test cases are:</p>
 
 <ul>
-<li>A spinning 3-D ball (<code>3d-ball.js</code>);</li>
-<li>Green Dam Musume (<code>kanpai-green-dam.js</code>);</li>
-<li>Madoka and her happy <del>tree</del> friends (<code>kanpai-madoka.js</code>).</li>
+<li>A spinning 3-D ball (<a href="test/visual/test-scripts/3d-ball.js"><code>3d-ball.js</code></a>);</li>
+<li>Green Dam Musume (<a href="test/visual/test-scripts/kanpai-green-dam.js"><code>kanpai-green-dam.js</code></a>);</li>
+<li>Madoka and her happy <del>tree</del> friends (<a href="test/visual/test-scripts/kanpai-madoka.js"><code>kanpai-madoka.js</code></a>).</li>
 </ul>
 
 <p>You are able to select the tests from the homepage. Source code of the tests can be found in <code>test/visual/test-scripts/</code>.</p>
 
-<p>Want to see some screenshots? <a href="docs/images/">Here they are.</a></p>
+<p>Want to see some screenshots?</p>
+
+<ul>
+  <li><a href="docs/images/visual-test-3d-ball.jpg">A spinning 3-D ball</a></li>
+  <li><a href="docs/images/visual-test-green-dam-musume.jpg">Green Dam Musume</a></li>
+  <li><a href="docs/images/visual-test-madoka-and-friends.jpg">Madoka and her happy <del>tree</del> friends</a></li>
+</ul>
 
 <h2>
 <a id="building" class="anchor" href="#building" aria-hidden="true"><span class="octicon octicon-link"></span></a>Building</h2>
@@ -141,14 +147,20 @@ but main features are active.</p>
 <p>为了能让各位能直接看到测试效果，代码已经编译了。您可以使用比较新的浏览器（别用老 IE 和那些国产浏览器）在当前的测试主页（<code>test/visual/index.html</code>）显示的示例中选择。当前包含的的示例有：</p>
 
 <ul>
-<li>一个三维旋转的球（<code>3d-ball.js</code>）；</li>
-<li>绿坝娘（<code>kanpai-green-dam.js</code>）；</li>
-<li>小圆脸和她愉♀快的小伙伴们（<code>kanpai-madoka.js</code>）。</li>
+<li>一个三维旋转的球（<a href="test/visual/test-scripts/3d-ball.js"><code>3d-ball.js</code></a>）；</li>
+<li>绿坝娘（<a href="test/visual/test-scripts/kanpai-green-dam.js"><code>kanpai-green-dam.js</code></a>）；</li>
+<li>小圆脸和她愉♀快的小伙伴们（<a href="test/visual/test-scripts/kanpai-madoka.js"><code>kanpai-madoka.js</code></a>）。</li>
 </ul>
 
 <p>所有的测试样例都位于 <code>test/visual/test-scripts</code> 目录下。</p>
 
-<p>如果想看看运行截图的话，<a href="docs/images/">这里就是</a>。</p>
+<p>这些是运行截图：</p>
+
+<ul>
+  <li><a href="docs/images/visual-test-3d-ball.jpg">一个三维旋转的球</a></li>
+  <li><a href="docs/images/visual-test-green-dam-musume.jpg">绿坝娘</a></li>
+  <li><a href="docs/images/visual-test-madoka-and-friends.jpg">小圆脸和她愉♀快的小伙伴们</a></li>
+</ul>
 
 <h2>
 <a id="构建" class="anchor" href="#%E6%9E%84%E5%BB%BA" aria-hidden="true"><span class="octicon octicon-link"></span></a>构建</h2>
