Page header buttons is now opened from a new window or tab.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">Bulletproof</h1>
       <h2 class="project-tagline">Advanced danmaku render engine under HTML5 / HTML5 高级弹幕渲染引擎</h2>
-      <a href="https://github.com/Hozuki/Bulletproof" class="btn">View on GitHub</a>
-      <a href="https://github.com/Hozuki/Bulletproof/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/Hozuki/Bulletproof/tarball/master" class="btn">Download .tar.gz</a>
-      <a href="test/visual/index.html" class="btn">Have a try</a>
+      <a href="https://github.com/Hozuki/Bulletproof" class="btn" target="_blank">View on GitHub</a>
+      <a href="https://github.com/Hozuki/Bulletproof/zipball/master" class="btn" target="_blank">Download .zip</a>
+      <a href="https://github.com/Hozuki/Bulletproof/tarball/master" class="btn" target="_blank">Download .tar.gz</a>
+      <a href="test/visual/index.html" class="btn" target="_blank">Have a try</a>
       <div>
         <iframe src="https://ghbtns.com/github-btn.html?user=Hozuki&repo=Bulletproof&type=star&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
         <iframe src="https://ghbtns.com/github-btn.html?user=Hozuki&repo=Bulletproof&type=fork&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
