Updated index.html, removed NW.js requirements.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@ which started a kind of art of creating splendid danmakus. It was all started in
 <h2>
 <a id="playing-with-bulletproof" class="anchor" href="#playing-with-bulletproof" aria-hidden="true"><span class="octicon octicon-link"></span></a>Playing with Bulletproof</h2>
 
-<p>The source files are compiled. However, playing with the tests needs <a href="http://nwjs.io">nw.js</a>.
-You can get it from its homepage. Browse <code>test/visual/index.html</code> in modern browsers to start
+<p>The source files are compiled. Browse <code>test/visual/index.html</code> in modern browsers to start
 selecting test cases. The test cases are:</p>
 
 <ul>
