--- a/test/visual/index.html
+++ b/test/visual/index.html
@@ -70,7 +70,7 @@
                 document.body.appendChild(newScriptTag);
             }
         }
-    })();
+    })(undefined, true);
 </script>
 <script type="text/javascript" src="bootstrap.js"></script>
 <script type="text/javascript">
