--- a/src/tests/visual/index.html
+++ b/src/tests/visual/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="cache-control" content="no-store">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="cache-control" content="no-store"/>
     <link rel="stylesheet" href="default.css"/>
     <title>Bulletproof Showcase</title>
 </head>
@@ -13,13 +13,16 @@
     <span id="local-video-selector-container">
         &nbsp;or&nbsp;
         <button id="select-local-video-btn" type="button">Select local video (NW.js/Electron)</button>
-        <input type="file" id="select-local-video" hidden="hidden" multiple="multiple"
-               accept=".mp4,.ogv,.flv,video/mp4,video/H264"/>
+        <input type="file" id="select-local-video" hidden="hidden" accept=".mp4,.ogv,.flv,video/mp4,video/H264"/>
+    </span>
+    <span>
+        &nbsp;or&nbsp;
+        <button id="select-no-video-btn" type="button">Continue without video</button>
     </span>
 </div>
-<div id="test-case-selector-container">
+<div id="test-case-selector" class="initially-hidden">
     <p><b>Test Cases</b></p>
-    <ol id="test-case-selector">
+    <ol id="test-case-list">
     </ol>
 </div>
 <div class="initially-hidden" id="playground">
@@ -31,31 +34,12 @@
             <span id="fps-indicator">
             </span>
         </span>
-        <div style="margin-top: 5px;">
-            <label for="input-danmaku">Add simple danmaku:
-                <input id="input-danmaku" name="input-danmaku" type="text" style="width: 120px;"/>
-            </label>
-            <label for="input-danmaku-position">Position:
-                <select id="input-danmaku-position">
-                    <option value="1">Flying (R2L)</option>
-                    <option value="2">Flying (L2R)</option>
-                    <option value="3">Top</option>
-                    <option value="4">Bottom</option>
-                    <option value="5">Top-left</option>
-                    <option value="6">Top-right</option>
-                    <option value="7">Bottom-left</option>
-                    <option value="8">Bottom-right</option>
-                </select>
-            </label>
-            <button id="btn-danmaku-spawner" type="button">Add</button>
-        </div>
     </div>
     <div id="glantern-container">
     </div>
 </div>
 <script type="text/javascript" id="bp-source-loader" src="bp-source-loader.js"></script>
 <script type="text/javascript" src="bootstrap.js"></script>
-<script type="text/javascript" src="danmaku-control.js"></script>
 <script type="text/javascript" src="reload-page.js"></script>
 </body>
 </html>
