--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </h1>
 
     <p>
-        I am sorry. The original content of this page is long outdated. I will refresh them later. Please enjoy the <a
+        I am sorry, the original content of this page is long outdated. I will refresh it later, and please enjoy the <a
             href="src/tests/visual/index.html" target="_blank">live preview</a> in the break.
     </p>
 
