--- a/src/tests/visual/index.html
+++ b/src/tests/visual/index.html
@@ -35,11 +35,11 @@
             </span>
         </span>
     </div>
-    <div id="glantern-container">
+    <div id="bulletproof-container">
     </div>
 </div>
 <script type="text/javascript" id="bp-source-loader" src="bp-source-loader.js"></script>
-<script type="text/javascript" src="bootstrap.js"></script>
+<script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" src="reload-page.js"></script>
 </body>
 </html>
