--- a/src/tests/visual/index.html
+++ b/src/tests/visual/index.html
@@ -13,7 +13,7 @@
     <span id="local-video-selector-container">
         &nbsp;or&nbsp;
         <button id="select-local-video-btn" type="button">Select local video (NW.js/Electron)</button>
-        <input type="file" id="select-local-video" hidden="hidden" accept=".mp4,.ogv,.flv,video/mp4,video/H264"/>
+        <input type="file" id="select-local-video" hidden="hidden" accept=".mp4,.ogv,.ogg,.flv,video/mp4,video/H264"/>
     </span>
     <span>
         &nbsp;or&nbsp;
